TEST_PROGRAMS/VALID/05/empty_interpreted_string.go
/* Empty interpreted string. */

package main

func main() {
	var s string = ""
}
