TEST_PROGRAMS/INVALID/04/18.go
package main

func main() {
    //Illegal linefeed in interpreted string
    var x = "aa
bb"
    x++ // "use" x
}
